<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.ifdose.app.ma.ifdose.app.WelcomeActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4">


        <Button
            android:id="@+id/btn_generate_rapport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClick_1"
            android:text="@string/calcul_btn"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDarker"
            android:onClick="onClick_2"
            android:text="@string/daily_infos"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_weight="1"
            />


        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:onClick="onClick_3"
            android:singleLine="true"
            android:text="@string/add_meal_btn"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_weight="1"
            />


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccentTwo"
            android:onClick="onClick_4"
            android:text="@string/rapport_btn"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_weight="1"
            />


    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
