<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ifdose.app.ma.ifdose.app.AddMealActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/textView31"
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:text="@string/add_new_meal"
            android:textAlignment="center"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:paddingLeft="5dp"
            android:text="@string/meal_name"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <EditText
            android:id="@+id/foodName"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:paddingLeft="5dp"
            android:text="@string/meal_type"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodName" />

        <Spinner
            android:id="@+id/foodCategory"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:paddingLeft="5dp"
            android:text="@string/meal_qt"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodCategory" />

        <EditText
            android:id="@+id/foodQuantity"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintLeft_toRightOf="@+id/unite"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Spinner
            android:id="@+id/unite"
            style="@style/SpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:entries="@array/unite"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            app:layout_constraintBaseline_toBaselineOf="@+id/foodQuantity"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/glucoQtTV"
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:paddingLeft="5dp"
            android:text="@string/glucose_qt"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unite" />

        <EditText
            android:id="@+id/glucoQtET"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/glucoQtTV" />


        <Button
            android:id="@+id/buttontCalcul"
            style="@style/Btn250dpStyle"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickAdd"
            android:text="@string/add_meal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/glucoQtET" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>